# splinter-locust

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  locustfile.py  pyproject.toml
examples/: locustfile.py
splinter_locust/: __init__.py  client.py  user.py
