[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "splinter-locust"
description = "Make Locust work with UI interactions using Splinter."
version="0.0.1"
dependencies = [
    "locust==2.17.0",
    "locust-plugins==4.1.0",
    "selenium==4.14.0",
    "splinter==0.19.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.5.0",
]
